--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="modal-video-container">
     <button class="modal-close-btn" aria-label="Fermer la vidéo">×</button>
     
-    <video id="projectVideo" class="project-video" controls autoplay playsinline>
+    <video id="projectVideo" class="project-video" controls  playsinline>
       <source src="" type="video/mp4">
       Votre navigateur ne supporte pas la lecture vidéo.
     </video>
