Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/my-avatar.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/ia_icon.png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -908,5 +908,6 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83998.75736262609!2d2
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
+
 
 </html>
